--- a/CoordSimulation/Config/DefaultEngine.ini
+++ b/CoordSimulation/Config/DefaultEngine.ini
@@ -1,7 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/CH2_HW5/Level/BasicLevel.BasicLevel
+EditorStartupMap=/Game/CH2_HW5/Level/BasicLevel.BasicLevel
 
 [/Script/Engine.RendererSettings]
 r.Mobile.ShadingPath=0
